# MVVM

./: .gitignore  R27.json  README.md  app.py  layout.py  main.py  main2.py  pyproject.toml  requirements.txt  tasks.md
Scripts/: live_plot.py  test_script.py
code/: app.py
code/Scripts/: live_plot.py
code/config/: default_shortcuts.json  shortcuts.json
code/core/: __init__.py
code/data/: app_settings.py  code_editor_data.py  terminal_data.py
code/models/: __init__.py
code/viewmodels/: code_editor_viewmodel.py  settings_viewmodel.py  shortcut_viewmodel.py
config/: shortcuts.json
core/: __init__.py  file_dialog.py
core/shortcuts/: __init__.py  shortcut.py  shortcut_manager.py  shortcut_registry.py
data/: __init__.py  app_settings.py  application_data.py  assets.py  calculator_data.py  code_editor_data.py  data.py  scripts_data.py  terminal_data.py
models/: __init__.py  calculator_model.py  code_editor_model.py  scripts_model.py  shortcut_model.py  terminal_model.py
scripting/: script_panel.py
src/: __init__.py
src/Scripts/: live_plot.py  test_script.py
src/config/: default_shortcuts.json  shortcuts.json
src/core/: __init__.py  logger.py  (+3 more)
test/: conftest.py
utils/: __init__.py  file_dialog.py  thread_pool.py
viewmodels/: __init__.py  calculator_ViewModel.py  code_editor_viewmodel.py  scripts_viewmodel.py  settings_viewmodel.py  shortcut_viewmodel.py  terminal_viewmodel.py  view_model.py
views/: __init__.py  calculator_panel.py  code_editor_pannel.py  dev_consol_pannel.py  runtime_panel.py  settings_panel.py  terminal_view.py  view.py
(+41 files in other folders)
