[project]
name = "mvvm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imgui-bundle>=1.6.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "debugpy>=1.8.14",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
[tool.pytest.ini_options]
pythonpath = ["."]
